--- a/project2/main.html
+++ b/project2/main.html
@@ -30,16 +30,16 @@
 		</div>
 	</div>
 	
-	<div class="shad"></div>
-	<div class="bg"></div>
+	<div class="bg">
 		<div class="container">
-			<div class="row align-items-top aboutus">
+			<div class="row align-items-center aboutus">
 				<div class="col-3">
 					<h1>о нас</h1>
 					<button>связаться</button>
 				</div>
 			</div>
 		</div>
+	</div>
 
 <!-- Металл -->
 	<div class="metall">
@@ -87,6 +87,32 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- Остались вопросы? -->
+	<div class="bg2">
+			<div class="container">
+				<div class="row align-items-top justify-content-center contacts">
+					<div class="col-5">
+						<h1>остались вопросы?</h1>
+					</div>
+				</div>
+				<div class="row align-items-center justify-content-center contacts">
+					<div class="col-7">
+						<p>Если у Вас остались вопросы, мы с радостью ответим на них по телефону <br>8-926-000-00-00. Также Вы можете оставить заявку на сайте и наш менеджер свяжется с Вами.</p>
+					</div>
+					<div class="col-4 offset-1">
+						<div class="main-form">
+								<input class="main-form-input" type="text">
+								<input class="main-form-input" type="text">
+								<input class="main-form-input" type="text">
+								<input class="main-form-input2" type="text">
+								<button type="submit">оставить заявку</button>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+	</div>	
 
 
 
