--- a/project2/main.html
+++ b/project2/main.html
@@ -47,9 +47,9 @@
 			<div class="row align-items-center">
 				<h1>металл</h1>
 			</div>
-			<div class="row align-items-center justify-content-center metall-works">
+			<div class="row align-items-center metall-works">
 				<div class="col-4"><img src="img\workman-wearing-hard-hat-working-with-metal-constructions-at-factory.jpg"></div>
-				<div class="col-7 works">
+				<div class="col-8 works">
 						<p>токарные работы</p>
 						<p>сверлильные работы</p>
 						<p>резка металла</p>
@@ -76,7 +76,7 @@
 			</div>
 			<div class="row align-items-center justify-content-center metall-works">
 				<div class="col-4"><img src="img\high-angle-people-using-sandpaper.jpg"></div>
-				<div class="col-7 works">
+				<div class="col-8 works">
 						<p>изготовление мебели по индивидуальному заказу</p>
 						<p>принимаем заказы на серийные работы</p>
 						<br>
@@ -96,7 +96,7 @@
 						<h1>остались вопросы?</h1>
 					</div>
 				</div>
-				<div class="row align-items-center justify-content-center contacts">
+				<div class="row align-items-center contacts">
 					<div class="col-7">
 						<p>Если у Вас остались вопросы, мы с радостью ответим на них по телефону <br>8-926-000-00-00. Также Вы можете оставить заявку на сайте и наш менеджер свяжется с Вами.</p>
 					</div>
