--- a/project2/main.html
+++ b/project2/main.html
@@ -74,7 +74,7 @@
 			<div class="row align-items-center">
 				<h1>мебель</h1>
 			</div>
-			<div class="row align-items-center justify-content-center metall-works">
+			<div class="row align-items-center metall-works">
 				<div class="col-4"><img src="img\high-angle-people-using-sandpaper.jpg"></div>
 				<div class="col-8 works">
 						<p>изготовление мебели по индивидуальному заказу</p>
