--- a/project2/main.html
+++ b/project2/main.html
@@ -96,18 +96,19 @@
 						<h1>остались вопросы?</h1>
 					</div>
 				</div>
-				<div class="row align-items-center contacts">
+				<div class="row align-items-center contacts contacts2">
 					<div class="col-7">
 						<p>Если у Вас остались вопросы, мы с радостью ответим на них по телефону <br>8-926-000-00-00. Также Вы можете оставить заявку на сайте и наш менеджер свяжется с Вами.</p>
 					</div>
 					<div class="col-4 offset-1">
 						<div class="main-form">
+						
 								<input class="main-form-input" type="text">
 								<input class="main-form-input" type="text">
 								<input class="main-form-input" type="text">
 								<input class="main-form-input2" type="text">
 								<button type="submit">оставить заявку</button>
-							</form>
+							
 						</div>
 					</div>
 				</div>
