--- a/project2/main.html
+++ b/project2/main.html
@@ -32,7 +32,7 @@
 	
 	<div class="bg">
 		<div class="container">
-			<div class="row align-items-center aboutus">
+			<div class="row align-items-center aboutus aboutus2">
 				<div class="col-3">
 					<h1>о нас</h1>
 					<button>связаться</button>
@@ -62,7 +62,7 @@
 						<br>
 						<p>металл:</p>
 						<p>сталь и цветные металлы</p>
-					<button>заказать</button>
+						<button>заказать</button>
 				</div>
 			</div>
 		</div>
