--- a/project2/main.html
+++ b/project2/main.html
@@ -32,7 +32,7 @@
 	
 	<div class="bg">
 		<div class="container">
-			<div class="row align-items-center aboutus aboutus2">
+			<div class="row align-items-center aboutus">
 				<div class="col-3">
 					<h1>о нас</h1>
 					<button>связаться</button>
@@ -91,12 +91,12 @@
 	<!-- Остались вопросы? -->
 	<div class="bg2">
 			<div class="container">
-				<div class="row align-items-top justify-content-center contacts">
+				<div class="row align-items-top justify-content-center">
 					<div class="col-5">
 						<h1>остались вопросы?</h1>
 					</div>
 				</div>
-				<div class="row align-items-center contacts contacts2">
+				<div class="row align-items-center contacts">
 					<div class="col-7">
 						<p>Если у Вас остались вопросы, мы с радостью ответим на них по телефону <br>8-926-000-00-00. Также Вы можете оставить заявку на сайте и наш менеджер свяжется с Вами.</p>
 					</div>
