--- a/project2/main.html
+++ b/project2/main.html
@@ -88,7 +88,7 @@
 				<div class="col-lg-6">
 					<p>Мы изготавливаем виброизоляторы ВТС (виброизолятор тросовой сферический). 
 					Виброизоляторы эффективно снижают вибрационные и ударные нагрузки.
-					Упругодемпфирующий элемент ВТС  - отрезки стальных канатов. 
+					Упругодемпфирующий элемент ВТС  - отрезки стальных канатов. <br><br>
 					Стальные канаты обеспечивают высокую эффективность ВТС при защите оборудования от воздействий вибраций и ударов в любом направлении.<br><br>
 					Металлическая конструкция гарантирует долговечность без изменения характеристик упругости, исключая любую 
 					необходимость использования запасных частей и замены.</p>
