--- a/mmprogroup/index.html
+++ b/mmprogroup/index.html
@@ -89,8 +89,8 @@
 				<h2>ВИБРОИЗОЛЯТОРЫ</h2>
 			<div class="row align-items-top justify-content-center margin60">
 				<div class="col-xl-6 col-12">
-					<p>Мы изготавливаем виброизоляторы ВТС (виброизолятор тросовой сферический)<b> от нуля до готового продукта на собственном производстве в соответствии с техническими условиями.</b><br>
-					Главный упругодемпфирующий элемент ВТС - отрезки стальных канатов. 
+					<p>Мы изготавливаем виброизоляторы ВТС (виброизолятор тросовой сферический)<b> от нуля до готового продукта на собственном производстве в соответствии с техническими условиями.</b></p>
+					<p>Главный упругодемпфирующий элемент ВТС - отрезки стальных канатов. 
 					Стальные канаты обеспечивают высокую эффективность ВТС при защите оборудования от воздействий вибраций и ударов в любом направлении.</p>
 					<p>Металлическая конструкция гарантирует долговечность без изменения характеристик упругости, исключая любую 
 					необходимость использования запасных частей и замены.</p>
