--- a/House/index.html
+++ b/House/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HOME</title>
-    <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Ink. House</title>
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/planshet.css">
-    <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+    <link rel="icon" type="image/png" href="img/Star%202.png">
 </head>
 <body>
     <!--Шапка меню-->
