--- a/House/index.html
+++ b/House/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -57,7 +57,7 @@
                 </div>
                 <div class="main-content-text">
                     <h1>РЕПЛИКИ<br> от
-                        <div class="h1-green">Ink. House</div>
+                        <h1 class="h1-green">Ink. House</h1>
                     </h1>
                     <p>Высокое качество отрисовки на плотной бумаге или льняном <br>холсте. Редкие произведения, доступные цены.</p>
                     <button>Продукция</button>
@@ -257,7 +257,7 @@
     <section class="team" id="team">
         <div class="team-block">
             <div class="art">
-                <img src="img/Group 210.png" alt="art">
+                <img src="img/art.png" alt="art">
             </div>
             <div class="team-content">
                 <h2>Наша команда</h2>
@@ -265,16 +265,15 @@
                     экспериментов, поражающих по своей масштабности и грандиозности. Мы вынуждены отталкиваться от того,
                     что консультация с широким активом.</p>
                 <div class="team-members">
-                    <img src="img/Ellipse%2030.png">
-                    <img src="img/Ellipse%2031.png">
-                    <img src="img/Ellipse%2032.png">
+                    <img src="img/Ellipse%2030.png" alt="член команды">
+                    <img src="img/Ellipse%2031.png" alt="член команды">
+                    <img src="img/Ellipse%2032.png" alt="член команды">
                 </div>
             </div>
         </div>
 </section>
 </div>
 
-</div>
 <!--Подвал-->
 <footer>
     <div class="container">
