--- a/House/index.html
+++ b/House/index.html
@@ -56,9 +56,8 @@
                     <img src="img/bird.png" alt="bird">
                 </div>
                 <div class="main-content-text">
-                    <h1>РЕПЛИКИ<br> от
-                        <h1 class="h1-green">Ink. House</h1>
-                    </h1>
+                    <h1>РЕПЛИКИ<br> от</h1>
+                    <h1 class="h1-green">Ink. House</h1>
                     <p>Высокое качество отрисовки на плотной бумаге или льняном <br>холсте. Редкие произведения, доступные цены.</p>
                     <button>Продукция</button>
                 </div>
