--- a/клуб четырех коней/index.html
+++ b/клуб четырех коней/index.html
@@ -149,7 +149,7 @@
                 <div class="wrapper">
                     <ul class="carousel">
                         <li class="card">
-                           <img src="img/participant.png" alt="">
+                           <img src="img/participant.png" alt="Хосе">
                            <h3>Хозе-Рауль Капабланка</h3>
                            <p>Чемпион мира по шахматам</p>
                            <div class="more">
@@ -157,7 +157,7 @@
                            </div>
                         </li>
                         <li class="card">
-                            <img src="img/participant.png" alt="">
+                            <img src="img/participant.png" alt="Эммануил">
                             <h3>Эммануил Ласкер</h3>
                             <p>Чемпион мира по шахматам</p>
                             <div class="more">
@@ -165,7 +165,7 @@
                             </div>
                          </li>
                          <li class="card">
-                            <img src="img/participant.png" alt="">
+                            <img src="img/participant.png" alt="Александр">
                             <h3>Александр Алехин</h3>
                             <p>Чемпион мира по шахматам</p>
                             <div class="more">
@@ -173,7 +173,7 @@
                             </div>
                          </li>
                          <li class="card">
-                            <img src="img/participant.png" alt="">
+                            <img src="img/participant.png" alt="Арон">
                             <h3>Арон Нимцович</h3>
                             <p>Чемпион мира по шахматам</p>
                             <div class="more">
@@ -181,7 +181,7 @@
                             </div>
                          </li>
                          <li class="card">
-                            <img src="img/participant.png" alt="">
+                            <img src="img/participant.png" alt="Рихард">
                             <h3>Рихард Рети</h3>
                             <p>Чемпион мира по шахматам</p>
                             <div class="more">
@@ -189,7 +189,7 @@
                             </div>
                          </li>
                          <li class="card">
-                            <img src="img/participant.png" alt="">
+                            <img src="img/participant.png" alt="Остап">
                             <h3>Остап Бендер</h3>
                             <p>Чемпион мира по шахматам</p>
                             <div class="more">
