--- a/House/index.html
+++ b/House/index.html
@@ -58,7 +58,7 @@
                 <div class="main-content-text">
                     <h1>РЕПЛИКИ КАРТИН<br> от
                         <span class="h1-green">Ink. House</span>
-                    </h1>
+                    </h1>   
                     <p>Высокое качество отрисовки на плотной бумаге или льняном <br>холсте. Редкие произведения, доступные цены.</p>
                     <button>Продукция</button>
                 </div>
@@ -87,147 +87,14 @@
                         <span>14 500 руб</span>
                         <button>В корзину</button>
                     </div>
-                    <div class="shop-item">
-                        <img src="img/2.jpg" alt="2">
-                        <h3>Анри Селин</h3>
-                        <h2>Дама с собачкой</h2>
-                        <p>Акрил, бумага (50х80)</p>
-                        <span>16 500 руб</span>
-                        <button>В корзину</button>
-                    </div>
-                    <div class="shop-item">
-                        <img src="img/3.jpg" alt="3">
-                        <h3>Франсуа Дюпон</h3>
-                        <h2>Процедура</h2>
-                        <p>Цветная литография (40х60)</p>
-                        <span>20 000 руб</span>
-                        <button>В корзину</button>
-                    </div>
-                    <div class="shop-item">
-                        <img src="img/4.jpg" alt="4">
-                        <h3>Луи Детуш</h3>
-                        <h2>Роза</h2>
-                        <p>Бумага, акрил (50х80)</p>
-                        <span>12 000 руб</span>
-                        <button>В корзину</button>
-                    </div>
-                    <div class="shop-item">
-                        <img src="img/5.jpg" alt="5">
-                        <h3>Франсуа Дюпон</h3>
-                        <h2>Птичья трапеза</h2>
-                        <p>Цветная литография (40х60)</p>
-                        <span>22 500 руб</span>
-                        <button>В корзину</button>
-                    </div>
-                    <div class="shop-item">
-                        <img src="img/6.jpg" alt="6">
-                        <h3>Пьер Моранж</h3>
-                        <h2>Пейзаж с рыбой</h2>
-                        <p>Цветная литография (40х60)</p>
-                        <span>20 000 руб</span>
-                        <button>В корзину</button>
-                    </div>
                 </div>
+
                 <div class="tab-content" id="content-2">
-                    <div class="shop-item">
-                        <img src="img/7.jpg" alt="1">
-                        <h3>Курт Вернер</h3>
-                        <h2>Над городом</h2>
-                        <p>Цветная литография (40х60)</p>
-                        <span>16 000 руб</span>
-                        <button>В корзину</button>
-                    </div>
-                    <div class="shop-item">
-                        <img src="img/8.jpg" alt="2">
-                        <h3>Макс Рихтер</h3>
-                        <h2>Птенцы</h2>
-                        <p>Холст, масло (50х80)</p>
-                        <span>14 500 руб</span>
-                        <button>В корзину</button>
-                    </div>
-                    <div class="shop-item">
-                        <img src="img/9.jpg" alt="3">
-                        <h3>Мартин Майер</h3>
-                        <h2>Среди листьев</h2>
-                        <p>Цветная литография (40х60)</p>
-                        <span>20 000 руб</span>
-                        <button>В корзину</button>
-                    </div>
-                    <div class="shop-item">
-                        <img src="img/10.jpg" alt="4">
-                        <h3>Герман Беккер</h3>
-                        <h2>Яркая птица</h2>
-                        <p>Цветная литография (40х60)</p>
-                        <span>13 000 руб</span>
-                        <button>В корзину</button>
-                    </div>
-                    <div class="shop-item">
-                        <img src="img/11.jpg" alt="5">
-                        <h3>Дятлы</h3>
-                        <h2>Птичья трапеза</h2>
-                        <p>Бумага, акрил (50х80)</p>
-                        <span>20 000 руб</span>
-                        <button>В корзину</button>
-                    </div>
-                    <div class="shop-item">
-                        <img src="img/12.jpg" alt="6">
-                        <h3>Вальтер Хартманн</h3>
-                        <h2>Большие воды</h2>
-                        <p>Бумага, акрил (50х80)</p>
-                        <span>23 000 руб</span>
-                        <button>В корзину</button>
-                    </div>
                 </div>
+
                 <div class="tab-content" id="content-3">
-                    <div class="shop-item">
-                        <img src="img/13.jpg" alt="1">
-                        <h3>Пол Смит</h3>
-                        <h2>Дикий зверь</h2>
-                        <p>Акварель, бумага (50х80)</p>
-                        <span>19 500 руб</span>
-                        <button>В корзину</button>
-                    </div>
-                    <div class="shop-item">
-                        <img src="img/14.jpg" alt="2">
-                        <h3>Джон Уайт</h3>
-                        <h2>Скалистый берег</h2>
-                        <p>Цветная литография (40х60)</p>
-                        <span>17 500 руб</span>
-                        <button>В корзину</button>
-                    </div>
-                    <div class="shop-item">
-                        <img src="img/15.jpg" alt="3">
-                        <h3>Джим Уотсон</h3>
-                        <h2>Река и горы</h2>
-                        <p>Акварель, бумага (50х80)</p>
-                        <span>20 500 руб</span>
-                        <button>В корзину</button>
-                    </div>
-                    <div class="shop-item">
-                        <img src="img/16.jpg" alt="4">
-                        <h3>Юджин Зиллион</h3>
-                        <h2>Белый попугай</h2>
-                        <p>Цветная литография (40х60)</p>
-                        <span>15 500 руб</span>
-                        <button>В корзину</button>
-                    </div>
-                    <div class="shop-item">
-                        <img src="img/17.jpg" alt="5">
-                        <h3>Эрик Гиллман</h3>
-                        <h2>Ночная рыба</h2>
-                        <p>Бумага, акрил (50х80)</p>
-                        <span>12 500 руб</span>
-                        <button>В корзину</button>
-                    </div>
-                    <div class="shop-item">
-                        <img src="img/18.jpg" alt="6">
-                        <h3>Альфред Барр</h3>
-                        <h2>Рыжий кот</h2>
-                        <p>Цветная литография (40х60)</p>
-                        <span>21 000 руб</span>
-                        <button>В корзину</button>
-                    </div>
                 </div>
+                
             </div>     
     </div>
 </section>
@@ -323,5 +190,6 @@
 </footer>
 
 <script src="js/burger.js"></script>
+<script src="js/shop.js"></script>
 </body>
 </html>
