--- a/aveji/index.html
+++ b/aveji/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>AVEJI</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/mobileStyle.css">
@@ -15,13 +16,13 @@
                 <img src="img/logo1x.png" alt="LOGO">
             </a>
             <nav class="header__menu">
-                <a href="#main">О нас</a>
-                <a href="#projects">Проекты</a>
-                <a href="#work-process">Материалы</a>
-                <a href="#feedback">Отзывы</a>
-                <a class="header__menu-link--active" href="#">+7 999 999 99 99</a>
+                <a href="#main" class="header__menu-link">О нас</a>
+                <a href="#projects" class="header__menu-link">Проекты</a>
+                <a href="#work-process" class="header__menu-link">Материалы</a>
+                <a href="#feedback" class="header__menu-link">Отзывы</a>
+                <a class="header__menu-link--active header__menu-link" href="#">+7 999 999 99 99</a>
             </nav>
-            <a class="header__menu-link--disactive" href="#">+7 999 999 99 99</a>
+            <a class="header__menu-link--disactive header__menu-link" href="#">+7 999 999 99 99</a>
             <button class="header__hamburger">
                 <span></span><span></span><span></span>
             </button>
