--- a/spim/index.html
+++ b/spim/index.html
@@ -148,17 +148,17 @@
           <tr>
             <td align="center">
               <!-- Основной контейнер -->
-              <table width="600" cellpadding="0" cellspacing="0" border="0" style="background-image: src('https://ibb.co/5XCVqGF2'); background-size: cover; background-position: center; padding: 17px 126px 180px 138px;">
+              <table width="600" cellpadding="0" cellspacing="0" border="0" style="background-image: url('img/banner.png'); background-size: cover; background-position: center; padding: 17px 126px 180px 138px;">
                     <!-- Лого -->
                     <tr>
                         <td align="center" style="padding-bottom: 41px;">
                             <table cellpadding="0" cellspacing="0" border="0" align="center">
                                 <tr>
                                     <td align="center" valign="middle" style="padding: 0 15px;">
-                                        <img src="https://ibb.co/LD34r0Nf" alt="Логотип 1" width="77" height="auto" style="display: block; border: 0; outline: none; max-width: 77px; height: auto;">
+                                        <img src="img/logo.png" alt="Логотип 1" width="77" height="auto" style="display: block; border: 0; outline: none; max-width: 77px; height: auto;">
                                     </td>
                                     <td align="center" valign="middle" style="padding: 0 15px;">
-                                        <img src="https://ibb.co/gL5Mw6SD" alt="Логотип 2" width="91" height="auto" style="display: block; border: 0; outline: none; max-width: 91px; height: auto;">
+                                        <img src="img/mebhome.png" alt="Логотип 2" width="91" height="auto" style="display: block; border: 0; outline: none; max-width: 91px; height: auto;">
                                     </td>
                                 </tr>
                             </table>
@@ -183,19 +183,19 @@
                                 <tr>
                                     <!-- Первая картинка -->
                                     <td width="33%" align="center" style="padding: 0 10px;">
-                                        <img src="https://ibb.co/Mx0868f2" alt="10%" width="117" height="auto" style="display: block; max-width: 117px; height: auto; margin: 0 auto;">
+                                        <img src="img/10.png" alt="10%" width="117" height="auto" style="display: block; max-width: 117px; height: auto; margin: 0 auto;">
                                         <h3 style="font-family: Circe, sans-serif; font-size: 1.5rem; font-weight: 800; color: #000000; margin: 10px 0 5px 0;">10%</h3>
                                         <p style="font-family: Arial, sans-serif; font-size: 0.88rem; color: #000000; margin: 0;">до 19:00</p>
                                     </td>
                                     <!-- Вторая картинка -->
                                     <td width="33%" align="center" style="padding: 0 10px;">
-                                        <img src="https://ibb.co/GfWnPqNj" alt="8%" width="107" height="auto" style="display: block; max-width: 107px; height: auto; margin: 0 auto;">
+                                        <img src="img/8.png" alt="8%" width="107" height="auto" style="display: block; max-width: 107px; height: auto; margin: 0 auto;">
                                         <h3 style="font-family: Circe, sans-serif; font-size: 1.5rem; font-weight: 800; color: #000000; margin: 10px 0 5px 0;">8%</h3>
                                         <p style="font-family: Arial, sans-serif; font-size: 0.88rem; color: #000000; margin: 0;">до 22:00</p>
                                     </td>
                                     <!-- Третья картинка -->
                                     <td width="33%" align="center" style="padding: 0 10px;">
-                                        <img src="https://ibb.co/yF5yJRqv" alt="5%" width="69" height="auto" style="display: block; max-width: 69px; height: auto; margin: 0 auto;">
+                                        <img src="img/5.png" alt="5%" width="69" height="auto" style="display: block; max-width: 69px; height: auto; margin: 0 auto;">
                                         <h3 style="font-family: Circe, sans-serif; font-size: 1.5rem; font-weight: 800; color: #000000; margin: 10px 0 5px 0;">5%</h3>
                                         <p style="font-family: Arial, sans-serif; font-size: 0.88rem; color: #000000; margin: 0;">до 00:00</p>
                                     </td>
@@ -262,29 +262,29 @@
               <table>
                 <tr>
                   <td width="33%" align="center" style="padding: 0 25px 40px 50px;">
-                    <img src="https://ibb.co/9342FZk8" alt="Подушки" style="padding-bottom: 20px;">
+                    <img src="img/pillows.png" alt="Подушки" style="padding-bottom: 20px;">
                     <a href="#" target="_blank"><b>Подушки</b></a>
                   </td>
                   <td width="33%" align="center" style="padding: 0 25px 40px 0;">
-                    <img src="https://ibb.co/CpxF5ZgG" alt="Одеяла" style="padding-bottom: 20px;">
+                    <img src="img/blankets.png" alt="Одеяла" style="padding-bottom: 20px;">
                     <a href="#" target="_blank"><b>Одеяла</b></a>
                   </td>
                   <td width="33%" align="center" style="padding: 0 50px 40px 0;">
-                    <img src="https://ibb.co/TBZcccfM" alt="Постельное бельё" style="padding-bottom: 20px;">
+                    <img src="img/linen.png" alt="Постельное бельё" style="padding-bottom: 20px;">
                     <a href="#" target="_blank"><b>Постельное бельё</b></a>
                   </td>
                 </tr>
                 <tr>
                   <td width="33%" align="center" style="padding: 0 25px 40px 50px;">
-                    <img src="https://ibb.co/hxw8k3N9" alt="Пледы и покрывала" style="padding-bottom: 20px;">
+                    <img src="img/plaid.png" alt="Пледы и покрывала" style="padding-bottom: 20px;">
                     <a href="#" target="_blank"><b>Пледы и покрывала</b></a>
                   </td>
                   <td width="33%" align="center" style="padding: 0 25px 40px 0;">
-                    <img src="https://ibb.co/QFgQ4TL8" alt="Ванная" style="padding-bottom: 20px;">
+                    <img src="img/bath.png" alt="Ванная" style="padding-bottom: 20px;">
                     <a href="#" target="_blank"><b>Ванная</b></a>
                   </td>
                   <td width="33%" align="center" style="padding: 0 50px 40px 0;">
-                    <img src="https://ibb.co/HTXz5N4L" alt="Кухня" style="padding-bottom: 20px;">
+                    <img src="img/kitchen.png" alt="Кухня" style="padding-bottom: 20px;">
                     <a href="#" target="_blank"><b>Кухня</b></a>
                   </td>
                 </tr>           
@@ -325,27 +325,39 @@
                 <tr>
                   <!-- VK -->
                   <td style="padding: 40px 10px 0 10px; vertical-align: middle;" align="center">
-                    <img src="https://ibb.co/tMrLC8jn" alt="VK" width="24" height="24" style="display: block; border: 0; outline: none;">
+                    <a href="#">
+                      <img src="img/vk.png" alt="VK" width="24" height="24" style="display: block; border: 0; outline: none;">
+                    </a>
                   </td>
                   <!-- Facebook -->
                   <td style="padding: 40px 10px 0 10px; vertical-align: middle;" align="center">
-                    <img src="https://ibb.co/xtF9HqVb" alt="Facebook" width="24" height="24" style="display: block; border: 0; outline: none;">
+                    <a href="#">
+                      <img src="img/facebook.png" alt="Facebook" width="24" height="24" style="display: block; border: 0; outline: none;">
+                    </a>
                   </td>
                   <!-- Twitter -->
                   <td style="padding: 40px 10px 0 10px; vertical-align: middle;" align="center">
-                    <img src="https://ibb.co/cX2888K3" alt="Twitter" width="24" height="24" style="display: block; border: 0; outline: none;">
+                    <a href="#">
+                      <img src="img/twitter.png" alt="Twitter" width="24" height="24" style="display: block; border: 0; outline: none;">
+                    </a>
                   </td>
                   <!-- Instagram -->
                   <td style="padding: 40px 10px 0 10px; vertical-align: middle;" align="center">
-                    <img src="https://ibb.co/Cs1VHJ1N" alt="Instagram" width="24" height="24" style="display: block; border: 0; outline: none;">
+                    <a href="#">
+                      <img src="img/inst.png" alt="Instagram" width="24" height="24" style="display: block; border: 0; outline: none;">
+                    </a>
                   </td>
                   <!-- YouTube -->
                   <td style="padding: 40px 10px 0 10px; vertical-align: middle;" align="center">
-                    <img src="https://ibb.co/pBdvsqPm" alt="YouTube" width="24" height="24" style="display: block; border: 0; outline: none;">
+                    <a href="#">
+                      <img src="img/youtub.png" alt="YouTube" width="24" height="24" style="display: block; border: 0; outline: none;">
+                    </a>
                   </td>
                   <!-- OK -->
                   <td style="padding: 40px 61px 0 10px; vertical-align: middle;" align="center">
-                    <img src="https://ibb.co/RT7rMGN6" alt="OK" width="auto" height="24" style="display: block; border: 0; outline: none;">
+                    <a href="#">
+                      <img src="img/ok.png" alt="OK" width="auto" height="24" style="display: block; border: 0; outline: none;">
+                    </a>
                   </td>
                   <!-- Телефон -->
                   <td style="padding: 40px 0 0 0; vertical-align: middle;" align="center">
@@ -377,13 +389,13 @@
                 <tr>
                   <td align="center" style="padding-right: 30px;">
                     <a href="#" target="_blank" style="color: rgba(163, 163, 163, 1); font-family: Arial; font-size: 14px; font-weight: 400; text-decoration: none;">
-                      <img src="https://ibb.co/FbRh2Cs7" alt="Отписаться">
+                      <img src="img/unsubscribe.png" alt="Отписаться">
                       Отписаться
                     </a>
                   </td>
                   <td align="center" >
                     <a href="#" target="_blank" style="color: rgba(163, 163, 163, 1); font-family: Arial; font-size: 14px; font-weight: 400; text-decoration: none;">
-                      <img src="https://ibb.co/rKc4f9kc" alt="Веь-версия">
+                      <img src="img/web.png" alt="Веь-версия">
                       Веб-версия
                     </a>
                   </td>
