--- a/spim/index.html
+++ b/spim/index.html
@@ -133,7 +133,7 @@
     <![endif]-->
 
     <center style="width: 100%;table-layout: fixed;background-color: #F7F7F7;padding-top: 40px; padding-bottom: 40px;">
-      <div style="max-width: 600px;background-color: #F7F7F7;box-shadow: 0px 0px 24px 0px rgba(138, 128, 106, 0.2);">
+      <div style="max-width: 600px;background-color: #F7F7F7;box-shadow: 40px 0px 50px 24px rgba(138, 128, 106, 0.2);">
         <!-- Прехедер -->
         <div style="font-size:0;line-height: 1px;mso-line-height-rule:exactly;display: none;max-width:0;opacity:0;overflow:hidden;mso-hide:all;">
           Предхедер
@@ -155,10 +155,10 @@
                             <table cellpadding="0" cellspacing="0" border="0" align="center">
                                 <tr>
                                     <td align="center" valign="middle" style="padding: 0 15px;">
-                                        <img src="img/logo.png" alt="Логотип 1" width="77" height="auto" style="display: block; border: 0; outline: none; max-width: 77px; height: auto;">
+                                        <img src="img/logo.png" alt="Логотип 1" width="77" height="39" style="display: block; border: 0; outline: none; max-width: 77px; height: auto;">
                                     </td>
                                     <td align="center" valign="middle" style="padding: 0 15px;">
-                                        <img src="img/mebhome.png" alt="Логотип 2" width="91" height="auto" style="display: block; border: 0; outline: none; max-width: 91px; height: auto;">
+                                        <img src="img/mebhome.png" alt="Логотип 2" width="91" height="17" style="display: block; border: 0; outline: none; max-width: 91px; height: auto;">
                                     </td>
                                 </tr>
                             </table>
@@ -183,19 +183,19 @@
                                 <tr>
                                     <!-- Первая картинка -->
                                     <td width="33%" align="center" style="padding: 0 10px;">
-                                        <img src="img/10.png" alt="10%" width="117" height="auto" style="display: block; max-width: 117px; height: auto; margin: 0 auto;">
+                                        <img src="img/10.png" alt="10%" width="117" height="60" style="display: block; max-width: 117px; height: auto; margin: 0 auto;">
                                         <h3 style="font-family: Circe, sans-serif; font-size: 1.5rem; font-weight: 800; color: #000000; margin: 10px 0 5px 0;">10%</h3>
                                         <p style="font-family: Arial, sans-serif; font-size: 0.88rem; color: #000000; margin: 0;">до 19:00</p>
                                     </td>
                                     <!-- Вторая картинка -->
                                     <td width="33%" align="center" style="padding: 0 10px;">
-                                        <img src="img/8.png" alt="8%" width="107" height="auto" style="display: block; max-width: 107px; height: auto; margin: 0 auto;">
+                                        <img src="img/8.png" alt="8%" width="107" height="60" style="display: block; max-width: 107px; height: auto; margin: 0 auto;">
                                         <h3 style="font-family: Circe, sans-serif; font-size: 1.5rem; font-weight: 800; color: #000000; margin: 10px 0 5px 0;">8%</h3>
                                         <p style="font-family: Arial, sans-serif; font-size: 0.88rem; color: #000000; margin: 0;">до 22:00</p>
                                     </td>
                                     <!-- Третья картинка -->
                                     <td width="33%" align="center" style="padding: 0 10px;">
-                                        <img src="img/5.png" alt="5%" width="69" height="auto" style="display: block; max-width: 69px; height: auto; margin: 0 auto;">
+                                        <img src="img/5.png" alt="5%" width="69" height="60" style="display: block; max-width: 69px; height: auto; margin: 0 auto;">
                                         <h3 style="font-family: Circe, sans-serif; font-size: 1.5rem; font-weight: 800; color: #000000; margin: 10px 0 5px 0;">5%</h3>
                                         <p style="font-family: Arial, sans-serif; font-size: 0.88rem; color: #000000; margin: 0;">до 00:00</p>
                                     </td>
@@ -261,30 +261,30 @@
             <td>
               <table>
                 <tr>
-                  <td width="33%" align="center" style="padding: 0 25px 40px 50px;">
-                    <img src="img/pillows.png" alt="Подушки" style="padding-bottom: 20px;">
+                  <td width="33%" align="center" valign="top" style="padding: 0 25px 40px 50px;">
+                    <img src="img/pillows.png" alt="Подушки" width="150" height="113" style="padding-bottom: 20px;">
                     <a href="#" target="_blank"><b>Подушки</b></a>
                   </td>
-                  <td width="33%" align="center" style="padding: 0 25px 40px 0;">
-                    <img src="img/blankets.png" alt="Одеяла" style="padding-bottom: 20px;">
+                  <td width="33%" align="center" valign="top" style="padding: 0 25px 40px 0;">
+                    <img src="img/blankets.png" alt="Одеяла" width="150" height="113" style="padding-bottom: 20px;">
                     <a href="#" target="_blank"><b>Одеяла</b></a>
                   </td>
-                  <td width="33%" align="center" style="padding: 0 50px 40px 0;">
-                    <img src="img/linen.png" alt="Постельное бельё" style="padding-bottom: 20px;">
+                  <td width="33%" align="center" valign="top" style="padding: 0 50px 40px 0;">
+                    <img src="img/linen.png" alt="Постельное бельё" width="150" height="113" style="padding-bottom: 20px;">
                     <a href="#" target="_blank"><b>Постельное бельё</b></a>
                   </td>
                 </tr>
                 <tr>
-                  <td width="33%" align="center" style="padding: 0 25px 40px 50px;">
-                    <img src="img/plaid.png" alt="Пледы и покрывала" style="padding-bottom: 20px;">
+                  <td width="33%" align="center" valign="top" style="padding: 0 25px 40px 50px;">
+                    <img src="img/plaid.png" alt="Пледы и покрывала" width="150" height="113" style="padding-bottom: 20px;">
                     <a href="#" target="_blank"><b>Пледы и покрывала</b></a>
                   </td>
-                  <td width="33%" align="center" style="padding: 0 25px 40px 0;">
-                    <img src="img/bath.png" alt="Ванная" style="padding-bottom: 20px;">
+                  <td width="33%" align="center" valign="top" style="padding: 0 25px 40px 0;">
+                    <img src="img/bath.png" alt="Ванная" width="150" height="113" style="padding-bottom: 20px;">
                     <a href="#" target="_blank"><b>Ванная</b></a>
                   </td>
-                  <td width="33%" align="center" style="padding: 0 50px 40px 0;">
-                    <img src="img/kitchen.png" alt="Кухня" style="padding-bottom: 20px;">
+                  <td width="33%" align="center" valign="top" style="padding: 0 50px 40px 0;">
+                    <img src="img/kitchen.png" alt="Кухня" width="150" height="113" style="padding-bottom: 20px;">
                     <a href="#" target="_blank"><b>Кухня</b></a>
                   </td>
                 </tr>           
@@ -356,7 +356,7 @@
                   <!-- OK -->
                   <td style="padding: 40px 61px 0 10px; vertical-align: middle;" align="center">
                     <a href="#">
-                      <img src="img/ok.png" alt="OK" width="auto" height="24" style="display: block; border: 0; outline: none;">
+                      <img src="img/ok.png" alt="OK" width="15" height="24" style="display: block; border: 0; outline: none;">
                     </a>
                   </td>
                   <!-- Телефон -->
@@ -387,15 +387,15 @@
             <td align="center">
               <table cellpadding="0" cellspacing="0" border="0" align="center">
                 <tr>
-                  <td align="center" style="padding-right: 30px;">
+                  <td align="center" valign="center" style="padding-right: 30px;">
                     <a href="#" target="_blank" style="color: rgba(163, 163, 163, 1); font-family: Arial; font-size: 14px; font-weight: 400; text-decoration: none;">
-                      <img src="img/unsubscribe.png" alt="Отписаться">
+                      <img src="img/unsubscribe.png" width="12" height="12" alt="Отписаться">
                       Отписаться
                     </a>
                   </td>
-                  <td align="center" >
+                  <td align="center" valign="center" >
                     <a href="#" target="_blank" style="color: rgba(163, 163, 163, 1); font-family: Arial; font-size: 14px; font-weight: 400; text-decoration: none;">
-                      <img src="img/web.png" alt="Веь-версия">
+                      <img src="img/web.png" width="12" height="12" alt="Веь-версия">
                       Веб-версия
                     </a>
                   </td>
